syntax = "proto3";

option go_package = "./orderpb";

message PlaceOrderRequest {
    uint32 user_id = 1;
    uint32 item_id = 2;
    uint32 quantity = 3;
}

message PlaceOrderResponse {
    uint32 statusCode = 1;
    Order order = 2;
}

message Order {
    uint32 order_id = 1;
    uint32 user_id = 2;
    uint32 item_id = 3;
    uint32 quantity = 4;
    float Amount = 5;
    string order_time = 6;
}

message GetOrderRequest {
    uint32 order_id = 1;
}

message GetOrderResponse {
    uint32 statusCode = 1;
    Order order = 2;
}
message GetAllOrdersRequest {
    uint32 user_id = 1;
}

message GetAllOrdersResponse {
    uint32 statusCode = 1;
    repeated Order orders = 2;
}

service OrderService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {}
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
    rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse) {}
}